--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,24 @@
+body
+{
+  background-color:#E3FCBF;
+}
+hr
+{
 
+ border-color:#EB5353;
+ border-style: none;
+ border-top-style: dotted;
+ border-width: 4px;
+
+
+ width: 15%;
+}
+img
+{
+  width: 200px;
+  height: 200px;
+}
+h1,h2,h3,h4
+{
+  color: #E84545;
+}
